# rspamd-mon

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: check_and_lint.yml  release.yml
src/: counters.rs  lib.rs  main.rs  plot.rs
