[package]
name = "rspamd-mon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
color-eyre = "0.6.0"
futures = "0.3.21"
rasciigraph = "0.1.1"
crossterm = "0.23.0"
colored = "2.0.0"
clap = {version = "3.1.0", features = ["derive"]}
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
